# censys-cloud-connector

./: .coveragerc  .env.sample  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .terraform-docs.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.compare.yml  docker-compose.yml  platforms.yml.sample  providers.yml.sample  pyproject.toml  pytest.ini
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md  config.yml
.github/actions/container-build-buildah/: action.yaml
.github/actions/container-test-buildah/: action.yaml
.github/actions/create-version-tag/: action.yaml
.github/actions/variable-to-file/: action.yaml
.github/workflows/: main-ci.yaml  pull-request.yaml  release-ci.yaml  reusable-build.yaml  reusable-lint.yaml  reusable-release-pypi.yaml  reusable-test.yaml
docs/: Makefile  README.md  cli.md  conf.py  deployment_methods.md  docker.md  env.md  faq.md  getting_started.md  index.md  kubernetes.md  local.md  overview.md  providers.md  providers_yml.md  whats_new.md
docs/_static/css/: custom.css
docs/aws/: provider_setup.md  stackset.md  templates.md
docs/aws/assets/: aws-orglist-setup.cast  aws-single-account.cast  aws-stackset-setup.cast
docs/azure/: provider_setup.md
docs/azure/assets/: azure-setup.cast
docs/diagrams/: architecture.md
docs/gcp/: provider_setup.md
docs/gcp/assets/: gcp-setup.cast
docs/terraform/: aws_ecs_task.md  google_scheduled_function.md
kubernetes/censys-cloud-connectors/: Chart.yaml  README.md  values.yaml
kubernetes/censys-cloud-connectors/templates/: _helpers.tpl  cronjob.yaml  providers.yaml  secret.yaml
scripts/: build.py  compare_workspaces.py
setup/: azure.md
src/censys/cloud_connectors/: __init__.py  __main__.py
src/censys/cloud_connectors/aws/: __init__.py  connector.py  platform_setup.py  provider_setup.py  settings.py
src/censys/cloud_connectors/aws_connector/: __init__.py  connector.py  credentials.py  enums.py  provider_setup.py  serverless.py  service.py  settings.py
src/censys/cloud_connectors/azure/: __init__.py  connector.py  platform_setup.py  provider_setup.py  settings.py
src/censys/cloud_connectors/azure_connector/: connector.py  enums.py  provider_setup.py  settings.py
src/censys/cloud_connectors/common/: __init__.py  aurora.py  cloud_asset.py  connector.py  context.py  enums.py  exceptions.py  healthcheck.py  ignore_list.py  logger.py  models.py  seed.py  settings.py  version.py
src/censys/cloud_connectors/common/cli/: __init__.py  args.py  base.py  platform_setup.py  provider_setup.py
src/censys/cloud_connectors/common/cli/commands/: __init__.py  config.py  scan.py
src/censys/cloud_connectors/common/plugins/: __init__.py  events.py  plugin.py  registry.py
src/censys/cloud_connectors/gcp/: __init__.py  connector.py  enums.py  platform_setup.py  provider_setup.py  settings.py
src/censys/cloud_connectors/gcp_connector/: connector.py  enums.py  provider_setup.py  settings.py
src/censys/cloud_connectors/plugins/: __init__.py  aws_tags.py  example.py
templates/aws/: iam_least_privilege_policy.json  iam_provider_setup_policy.json  iam_recommended_policy.json  stackset_role_deploy.json
terraform/: README.md
terraform/aws-ecs-task/: .terraform.lock.hcl  README.md  main.tf  output.tf  terraform.tfvars.example  variables.tf
terraform/aws-ecs-task/templates/: container_def.json.tpl  cross_account_policy.json.tpl  get_secret_policy.json.tpl  list_stack_set_instances_policy.json.tpl  root_policy.json.tpl  task_exec_policy.json.tpl
terraform/google-scheduled-function/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/google-scheduled-function/function_source/: .gitignore  main.py
tests/: base_case.py  base_connector_case.py  test_aws_connector.py  test_aws_credentials.py  test_aws_provider_setup.py  test_aws_service.py  test_aws_settings.py  test_azure_connector.py  test_azure_platform_setup.py  test_azure_provider_setup.py  test_base_cli.py  test_cli.py  test_cloud_asset.py  test_connector.py  test_gcp_connector.py  test_gcp_enums.py  test_gcp_provider_setup.py  test_healthcheck.py  test_platform_setup.py  test_provider_setup.py  test_seed.py  test_settings.py  utils.py
tests/azure/: test_azure_connector.py
tests/azure/data/: test_azure_responses.json
tests/common/: test_cloud_asset.py  test_connector.py  test_seed.py  test_settings.py
tests/common/data/: test_azure_platforms.yml  test_unknown_platforms.yml
tests/common/test_settings/: test_no_name_platforms.yml
tests/data/: default_settings.json  test_all_providers.yml  test_aws_cli_responses.json  test_aws_providers.yml  test_aws_responses.json  test_aws_service_responses.json  test_azure_platforms.yml  test_azure_providers.yml  test_azure_responses.json  test_consts.json  test_gcp_cli_responses.json  test_gcp_providers.yml  test_gcp_responses.json  test_gcp_service_account.json  test_no_name_platforms.yml  test_no_name_providers.yml  test_unknown_platforms.yml  test_unknown_providers.yml
tests/data/aws/: accounts.yml  accounts_inherit.yml  accounts_inherit_role.yml  accounts_inherit_role_and_creds.yml  accounts_key.yml  accounts_override.yml  accounts_override_invalid.yml  accounts_override_role.yml  accounts_parent_key_child_role.yml  accounts_role.yml  ecs.yml  primary_access_key.yml  primary_role.yml
tests/terraform/aws_instances/: .terraform.lock.hcl  buckets.tf  databases.tf  variables.tf
