[tool.poetry]
name = "cloud-connectors-unified"
version = "3.0.0"
description = "Censys Cloud Connectors Unified"
authors = ["Censys, Inc. <support@censys.io>"]
license = "PROPRIETARY"
readme = "README.md"
packages = [{ include = "censys/cloud_connectors", from = "src" }]

[tool.poetry.scripts]
censys-cc = "censys.cloud_connectors.common.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
# Common
censys = "^2.1.2"
importlib-metadata = { version = "*", python = "<=3.8" }
inquirerpy = "^0.3.3"
pydantic = { extras = ["dotenv"], version = "^1.9.0" }
PyYAML = "^6.0"
requests = "^2.27.1"
# Azure
azure-cli = { version = "^2.33.1", optional = true }
azure-common = { version = "^1.1.28", optional = true }
azure-core = { version = "^1.22.0", optional = true }
azure-identity = { version = "^1.7.1", optional = true }
azure-mgmt-compute = { version = ">=23.1.0,<23.2.0", optional = true }
azure-mgmt-containerinstance = { version = "^9.1.0", optional = true }
azure-mgmt-core = { version = "^1.3.0", optional = true }
azure-mgmt-dns = { version = "^8.0.0", optional = true }
azure-mgmt-network = { version = "^19.3.0", optional = true }
azure-mgmt-resource = { version = "20.0.0", optional = true }
azure-mgmt-sql = { version = "^3.0.1", optional = true }
azure-mgmt-storage = { version = "^19.0.0", optional = true }
azure-storage-blob = { version = "^12.9.0", optional = true }
# GCP
google-auth = {version = "^2.6.0", optional = true}
google-cloud-securitycenter = {version = "^1.9.0", optional = true}

[tool.poetry.dev-dependencies]
# Debug
ipython = "^8.1.0"
# Linting
black = "^22.1.0"
blacken-docs = "^1.12.1"
darglint = "^1.8.1"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.1.11"
flake8-comprehensions = "^3.8.0"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.1.1"
flake8-pytest-style = "^1.6.0"
flake8-simplify = "^0.18.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
pyupgrade = "^2.31.0"
# Testing
parameterized = "^0.8.1"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-datadir = "^1.3.1"
pytest-mock = "^3.7.0"
# Typing
mypy = "^0.931"
types-PyYAML = "^6.0.4"
types-requests = "^2.27.8"

[tool.poetry.extras]
azure = [
    "azure-common",
    "azure-core",
    "azure-identity",
    "azure-mgmt-compute",
    "azure-mgmt-containerinstance",
    "azure-mgmt-core",
    "azure-mgmt-dns",
    "azure-mgmt-network",
    "azure-mgmt-resource",
    "azure-mgmt-resource",
    "azure-mgmt-sql",
    "azure-mgmt-storage",
    "azure-storage-blob"
]
gcp = ["google-auth", "google-cloud-securitycenter"]

[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]
multi_line_output = 3
known_first_party = ["censys.cloud_connectors"]
known_censys = ["censys"]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "CENSYS",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

[tool.mypy]
exclude = [".venv", ".git"]
files = ["src"]
namespace_packages = true
plugins = ["pydantic.mypy"]
pretty = true
python_version = "3.9"
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    # Common
    "InquirerPy.*",
    # Tests
    "parameterized",
    # GCP
    "google.oauth2",
    # Azure
    "azure.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "azure.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
